<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>cubews</groupId>
  <artifactId>cubews</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
  	<version.jersey>2.27</version.jersey>
  	<version.log4j>2.11.1</version.log4j>
  </properties>
  <!--  this is for having consistent jackson versions -->
  <dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson</groupId>
            <artifactId>jackson-bom</artifactId>
            <version>2.9.0</version>
            <scope>import</scope>
            <type>pom</type>
        </dependency>   
    </dependencies>
  </dependencyManagement>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.1</version>
        <configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
       	<groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>3.0.1</version>
        <scope>provided</scope>
    </dependency>
  	<dependency>
  		<groupId>org.glassfish.jersey.core</groupId>
  		<artifactId>jersey-common</artifactId>
  		<version>${version.jersey}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.json</groupId>
  		<artifactId>json</artifactId>
  		<version>20180813</version>
  	</dependency>
  	<dependency>
  		<groupId>org.glassfish.jersey.core</groupId>
  		<artifactId>jersey-server</artifactId>
  		<version>${version.jersey}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.glassfish.jersey.containers</groupId>
  		<artifactId>jersey-container-servlet</artifactId>
  		<version>${version.jersey}</version>
  	</dependency>
  	<dependency>
  		<groupId>org.glassfish.jersey.inject</groupId>
  		<artifactId>jersey-hk2</artifactId>
  		<version>${version.jersey}</version>
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8 -->
  	<!--  json support for jdk 8 types such as Optional -->
	<dependency>
	    <groupId>com.fasterxml.jackson.datatype</groupId>
	    <artifactId>jackson-datatype-jdk8</artifactId>
	</dependency>  	
  	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
	<dependency>
	    <groupId>org.glassfish.jersey.media</groupId>
	    <artifactId>jersey-media-json-jackson</artifactId>
	    <version>${version.jersey}</version>
	</dependency>  	
  	<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
	<dependency>
    	<groupId>org.apache.solr</groupId>
    	<artifactId>solr-solrj</artifactId>
    	<version>7.5.0</version>
	</dependency>
	<dependency> 
	    <groupId>org.apache.logging.log4j</groupId> 
	    <artifactId>log4j-api</artifactId> 
	    <version>${version.log4j}</version> 
	</dependency> 
	<dependency> 
	    <groupId>org.apache.logging.log4j</groupId> 
	    <artifactId>log4j-core</artifactId> 
	    <version>${version.log4j}</version> 
	    </dependency> 
	<dependency> 
	    <groupId>org.apache.logging.log4j</groupId> 
	    <artifactId>log4j-slf4j-impl</artifactId> 
	    <version>${version.log4j}</version> 
	</dependency>
	<!-- jaxb was removed from java 9 onwards, so need to explicitly add -->	
	<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
	<dependency>
	    <groupId>javax.xml.bind</groupId>
	    <artifactId>jaxb-api</artifactId>
	    <version>2.3.1</version>
	</dependency>
	
  </dependencies>
</project>